@@ -390,6 +390,16 @@ class TestSiteATTopic(atcttestcase.ATCTTypeTestCase):
         # Check the batch length
         self.assertEqual(len(topic.queryCatalog(batch=True, b_size=5)), 5)
 
+    def test_queryCatalogOverrideCriteria(self):
+        #Ensure that we can override params
+        topic = self._ATCT
+        crit = topic.addCriterion('portal_type', 'ATSimpleStringCriterion')
+        crit.setValue('Document')
+        # Add a bunch of folders.
+        for i in range(1, 20):
+            self.folder.invokeFactory('Folder', str(i))
+        self.assertEqual(len(topic.queryCatalog(portal_type='Folder')), 23)
+
     def test_get_size(self):
         atct = self._ATCT
         self.failUnlessEqual(atct.get_size(), 1)
