@@ -4,7 +4,8 @@ Changelog
 2.0b10 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Merge fix of test_queryCatalogOverrideCriteria from 1.3.6 branch
+  [toutpt]
 
 
 2.0b9 (2010-05-01)
